first rama commit