@@ -8,7 +8,9 @@
   :global-vars {*warn-on-reflection* true}
 
   :dependencies
-  [[org.clojure/clojure "1.12.5"]
+  ;; Pinned by Rama: it checks the exact Clojure version at load time and
+  ;; refuses any other, 1.12.5 included. Move these together.
+  [[org.clojure/clojure "1.12.4"]
    [org.clojure/core.async "1.9.865"]
    [org.clojure/spec.alpha "0.6.249"]
    [org.clojure/core.specs.alpha "0.5.81"]
@@ -29,11 +31,25 @@
    [org.clojure/tools.logging "1.3.0"]
    [org.apache.logging.log4j/log4j-api "2.26.1"]
    [org.apache.logging.log4j/log4j-core "2.26.1"]
-   [org.apache.logging.log4j/log4j-slf4j-impl "2.26.1"]]
+   [org.apache.logging.log4j/log4j-slf4j-impl "2.26.1"]
+   ;; Rama, the durable side of the broker (see mqttkat.rama.*). A plain
+   ;; dependency rather than :provided, which is what a module-only project
+   ;; would use: the broker embeds an InProcessCluster in dev and is a foreign
+   ;; client of a real cluster in production, and both need Rama on the
+   ;; broker's own classpath. The jar that goes to a cluster with
+   ;; `rama deploy` is the thin `lein jar`, which carries no dependencies.
+   ;; Rama binds slf4j 2 to log4j; this project binds slf4j 1.7 to the same
+   ;; log4j, and one binding is enough — the broker's stays.
+   [com.rpl/rama "1.9.0" :exclusions [org.apache.logging.log4j/log4j-slf4j2-impl]]]
+
+  :repositories [["rpl-releases" {:url "https://nexus.redplanetlabs.com/repository/maven-public-releases"}]]
 
   :jvm-opts
   ["-Dclojure.compiler.disable-locals-clearing=true"
-   "-Xms128m" "-Xmx4G" "-Djdk.attach.allowAttachSelf" "-XX:+UnlockDiagnosticVMOptions" "-XX:+DebugNonSafepoints"]
+   "-Xms128m" "-Xmx4G" "-Djdk.attach.allowAttachSelf" "-XX:+UnlockDiagnosticVMOptions" "-XX:+DebugNonSafepoints"
+   ;; Rama's RocksDB loads a native library; on 21 the JVM warns about it on
+   ;; every start unless told these are expected.
+   "--add-opens" "java.base/java.lang=ALL-UNNAMED" "--enable-native-access=ALL-UNNAMED"]
 
   ;; --release 21, not -source/-target: it pins the platform API too, so javac
   ;; can prove nothing newer leaks in (and stops warning that it cannot). 21 is
@@ -53,7 +69,12 @@
             [lein-auto "0.1.3"]
             [lein-cloverage "1.2.4"]]
   :jar-exclusions [#"^java.*"] ; exclude the java directory in source path
-  :main mqttkat.server
+  ;; ^:skip-aot: without it `lein jar` and `lein run` compile the main
+  ;; namespace and everything it reaches, and the thin jar came out holding
+  ;; two hundred compiled Rama classes. That jar is what `rama deploy` ships
+  ;; to a cluster, whose workers have Rama already; theirs must be the only
+  ;; copy. The uberjar profile below still compiles it for its Main-Class.
+  :main ^:skip-aot mqttkat.server
   :profiles
   {:dev
    {:dependencies [[djblue/portal "0.67.2"]
@@ -64,4 +85,10 @@
    ;; compiled Main-Class. At the top level it compiled every namespace
    ;; mqttkat.server requires on every task, and the resulting stale classes
    ;; shadow newer sources until someone thinks to run `lein clean`.
-   :uberjar {:aot [mqttkat.server]}})
+   ;; And into a directory of its own: compiled into target/classes, those
+   ;; classes — every namespace, and every dependency's — outlive the build
+   ;; and are picked up by the next `lein test`, where a class compiled from
+   ;; yesterday's source meets today's, and a fn's inner class is not found.
+   ;; The jar still lands in target/; only the class files move.
+   :uberjar {:aot          [mqttkat.server]
+             :compile-path "target/uberjar-classes"}})
